--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -29,7 +29,7 @@
 <!-- footer -->
 <div class="footer">
     <div class="container row mx-auto">
-        <div class="col-lg-6 col-lg-3 w3_footer_grid">
+        <div class="col-lg-3 w3_footer_grid">
             <h3>information</h3>
             <ul class="w3_footer_grid_list">
                 <li><a routerLink="/event">Events</a></li>
@@ -39,15 +39,15 @@
                 <!-- <li><a href="#">Short Codes</a></li> -->
             </ul>
         </div>
-        <div class="col-lg-6 col-lg-3 w3_footer_grid">
+        <div class="col-lg-3 w3_footer_grid">
             <h3>policy info</h3>
             <ul class="w3_footer_grid_list">
-                <li><a href="#">FAQ</a></li>
-                <li><a href="#">privacy policy</a></li>
-                <li><a href="#">terms of use</a></li>
+                <li><a>FAQ</a></li>
+                <li><a>privacy policy</a></li>
+                <li><a>terms of use</a></li>
             </ul>
         </div>
-        <div class="col-lg-6 col-lg-3 w3_footer_grid">
+        <div class="col-lg-3 w3_footer_grid">
             <h3>what in stores</h3>
             <ul class="w3_footer_grid_list">
                 <li><a routerLink="/pet">Pet Food</a></li>
@@ -57,7 +57,7 @@
                 <li><a routerLink="/household">Households</a></li>
             </ul>
         </div>
-        <div class="col-lg-6 col-lg-3 w3_footer_grid">
+        <div class="col-lg-3 w3_footer_grid">
             <h3>twitter posts</h3>
             <ul class="w3_footer_grid_list1">
                 <li><label class="fa fa-twitter" aria-hidden="true"></label><i>01 day ago</i><span>Non numquam <a href="#">http://sd.ds/13jklf#</a>
@@ -70,17 +70,17 @@
         </div>
         <div class="clearfix"> </div>
         <div class="container row agile_footer_grids">
-            <div class="col-lg-6 col-lg-3 w3_footer_grid agile_footer_grids_w3_footer">
+            <div class="col-lg-3 w3_footer_grid agile_footer_grids_w3_footer">
                 <div class="w3_footer_grid_bottom">
                     <h4>100% secure payments</h4>
                     <img src="../../assets/card.png" alt=" " class="img-responsive" />
                 </div>
             </div>
-            <div class="col-lg-6 col-lg-3 w3_footer_grid agile_footer_grids_w3_footer">
+            <div class="col-lg-3 w3_footer_grid agile_footer_grids_w3_footer">
                 <div class="w3_footer_grid_bottom">
                     <h5>connect with us</h5>
                     <ul class="agileits_social_icons">
-                        <li><a href="#" class="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a href="facebook.com" class="facebook"><i class="fa fa-facebook" aria-hidden="true" target="_blank" ></i></a></li>
                         <li><a href="#" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                         <li><a href="#" class="google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
                         <li><a href="#" class="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
