--- a/src/styles.css
+++ b/src/styles.css
@@ -2152,6 +2152,12 @@ ul.wmuSliderPagination {
   transition      : opacity 0.2s linear;
 }
 
+/* .starRating:not(old) > label:hover:before,
+.starRating:not(old) > label:hover ~ label:before,
+.starRating:not(:hover) > :checked ~ label:before{
+  opacity : 1;
+} */
+
 .starRating:not(old) > label:hover:before,
 .starRating:not(old) > label:hover ~ label:before,
 .starRating:not(:hover) > :checked ~ label:before{
