--- a/src/app/household/household.component.html
+++ b/src/app/household/household.component.html
@@ -29,7 +29,7 @@
                                             <form action="#" method="post">
                                                 <fieldset>
                                                     <input type="hidden" name="id" value="_cart" />
-                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" />
+                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" data-toggle="modal" data-target="#exampleModal" />
                                                 </fieldset>
                                             </form>
                                         </div>
@@ -66,7 +66,7 @@
                                             <form action="#" method="post">
                                                 <fieldset>
                                                     <input type="hidden" name="id" value="_cart" />
-                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" />
+                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" data-toggle="modal" data-target="#exampleModal" />
                                                 </fieldset>
                                             </form>
                                         </div>
@@ -102,7 +102,7 @@
                                             <form action="#" method="post">
                                                 <fieldset>
                                                     <input type="hidden" name="id" value="_cart" />
-                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" />
+                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" data-toggle="modal" data-target="#exampleModal" />
                                                 </fieldset>
                                             </form>
                                         </div>
@@ -118,3 +118,4 @@
     </div>
 </div>
 <div class="clearfix"></div>
+<app-dialog title="Cart" msg="Added Successfully!"></app-dialog>
