--- a/src/app/beverage/beverage.component.html
+++ b/src/app/beverage/beverage.component.html
@@ -29,7 +29,7 @@
                                                 <form action="#" method="post">
                                                     <fieldset>
                                                         <input type="hidden" name="id" value="_cart" />
-                                                        <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" />
+                                                        <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" data-toggle="modal" data-target="#exampleModal" />
                                                     </fieldset>
                                                 </form>
                                             </div>
@@ -67,7 +67,7 @@
                                                 <form action="#" method="post">
                                                     <fieldset>
                                                         <input type="hidden" name="id" value="_cart" />
-                                                        <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" />
+                                                        <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" data-toggle="modal" data-target="#exampleModal"/>
                                                     </fieldset>
                                                 </form>
                                             </div>
@@ -104,7 +104,7 @@
                                                 <form action="#" method="post">
                                                     <fieldset>
                                                         <input type="hidden" name="id" value="_cart" />
-                                                        <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" />
+                                                        <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" data-toggle="modal" data-target="#exampleModal"/>
                                                     </fieldset>
                                                 </form>
                                             </div>
@@ -120,3 +120,4 @@
         </div>
     </div>
     <div class="clearfix"></div>
+    <app-dialog title="Cart" msg="Added Successfully!"></app-dialog>
