--- a/src/app/bread/bread.component.html
+++ b/src/app/bread/bread.component.html
@@ -27,7 +27,7 @@
                                             <form action="#" method="post">
                                                 <fieldset>
                                                     <input type="hidden" name="id" value="_cart" />
-                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" />
+                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" data-toggle="modal" data-target="#exampleModal" />
                                                 </fieldset>
                                             </form>
                                         </div>
@@ -62,7 +62,7 @@
                                             <form action="#" method="post">
                                                 <fieldset>
                                                     <input type="hidden" name="id" value="_cart" />
-                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" />
+                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" data-toggle="modal" data-target="#exampleModal" />
                                                 </fieldset>
                                             </form>
                                         </div>
@@ -96,7 +96,7 @@
                                             <form action="#" method="post">
                                                 <fieldset>
                                                     <input type="hidden" name="id" value="_cart" />
-                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" />
+                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" data-toggle="modal" data-target="#exampleModal" />
                                                 </fieldset>
                                             </form>
                                         </div>
@@ -111,3 +111,4 @@
         </div>
     </div>
     <div class="clearfix"></div>
+    <app-dialog title="Cart" msg="Added Successfully!"></app-dialog>
