--- a/src/app/fixed-nav/fixed-nav.component.css
+++ b/src/app/fixed-nav/fixed-nav.component.css
@@ -54,7 +54,7 @@
 #PPMiniCart form {
     position: relative;
     width: 400px;
-    max-height: 400px;
+    /* max-height: 400px; */
     margin-left: -200px;
     padding: 10px 10px 40px;
     background: #fbfbfb;
@@ -80,6 +80,7 @@
     clear: both;
     float: left;
     width: 380px;
+    max-height: 350px;
     margin: 5px 0 20px;
     padding: 10px;
     list-style-type: none;
@@ -87,6 +88,8 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 #PPMiniCart .minicart-item {
