--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -80,11 +80,11 @@
                 <div class="w3_footer_grid_bottom">
                     <h5>connect with us</h5>
                     <ul class="agileits_social_icons">
-                        <li><a href="facebook.com" class="facebook"><i class="fa fa-facebook" aria-hidden="true" target="_blank" ></i></a></li>
-                        <li><a href="#" class="twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                        <li><a href="#" class="google"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                        <li><a href="#" class="instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                        <li><a href="#" class="dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.facebook.com" class="facebook" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a href="https://twitter.com" class="twitter" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.google.com/" class="google" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.instagram.com/" class="instagram" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        <li><a href="https://dribbble.com/" class="dribbble" target="_blank"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
                     </ul>
                 </div>
             </div>
