--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -98,7 +98,7 @@
                                             <form action="#" method="post">
                                                 <fieldset>
                                                     <input type="hidden" name="id" value="_cart" />
-                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" />
+                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" data-toggle="modal" data-target="#exampleModal" />
                                                 </fieldset>
                                             </form>
                                         </div>
@@ -184,3 +184,4 @@
     </div>
 </div>
 <!-- //fresh-vegetables -->
+<app-dialog title="Cart" msg="Added Successfully!"></app-dialog>
