--- a/src/app/kitchen/kitchen.component.html
+++ b/src/app/kitchen/kitchen.component.html
@@ -125,7 +125,7 @@
                                     <form action="#" method="post">
                                         <fieldset>
                                             <input type="hidden" name="id" value="_cart" />
-                                            <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" />
+                                            <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" data-toggle="modal" data-target="#exampleModal" />
                                         </fieldset>
                                     </form>
                                 </div>
@@ -138,3 +138,4 @@
         <div class="clearfix"> </div>
     </div>
 </div>
+<app-dialog title="Cart" msg="Added Successfully!"></app-dialog>
