--- a/src/app/pet/pet.component.html
+++ b/src/app/pet/pet.component.html
@@ -29,7 +29,7 @@
                                             <form>
                                                 <fieldset>
                                                     <input type="hidden" name="id" value="_cart" />
-                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())"/>
+                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" data-toggle="modal" data-target="#exampleModal"/>
                                                 </fieldset>
                                             </form>
                                         </div>
@@ -64,7 +64,7 @@
                                             <form action="#" method="post">
                                                 <fieldset>
                                                     <input type="hidden" name="id" value="_cart" />
-                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" />
+                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" data-toggle="modal" data-target="#exampleModal" />
                                                 </fieldset>
                                             </form>
                                         </div>
@@ -98,7 +98,7 @@
                                             <form action="#" method="post">
                                                 <fieldset>
                                                     <input type="hidden" name="id" value="_cart" />
-                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" />
+                                                    <input type="submit" name="submit" value="Add to cart" class="button" (click)="addToCart(product.payload.doc.data())" data-toggle="modal" data-target="#exampleModal" />
                                                 </fieldset>
                                             </form>
                                         </div>
@@ -113,3 +113,4 @@
         </div>
     </div>
     <div class="clearfix"></div>
+    <app-dialog title="Cart" msg="Added Successfully!"></app-dialog>
