--- a/src/app/fixed-nav/fixed-nav.component.css
+++ b/src/app/fixed-nav/fixed-nav.component.css
@@ -1,19 +1,94 @@
 
+.w3l_offers {
+    width: 23%;
+    text-align: center;
+}
+
+.w3l_offers a {
+    padding: .5em 0em;
+}
+
+.w3l_search {
+    margin: 0em;
+}
+
+.w3l_search input[type="text"] {
+    padding: 12px;
+}
+
+.w3l_search input[type="submit"] {
+    padding: 11px 0px;
+    border: none;
+    float: left;
+}
+
+.product_list_header {
+    width: 15%;
+    margin: 0;
+}
+
+fieldset {
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
+    padding-inline-end: 0px;
+    padding-block-start: 0px;
+    padding-block-end: 0px;
+}
+
+.product_list_header input.button {
+    padding: .6em 2.5em .6em 1em;
+}
+
+.w3l_header_right {
+    width: 5%;
+    margin: 0;
+    padding: 0;
+}
+
+.w3l_header_right1 {
+    width: 15%;
+    margin: 0;
+    text-align: center;
+}
+
+h2 {
+    margin: 0em;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+}
+
+.w3l_header_right1 h2 a {
+    padding: .4em 0em;
+}
+
 .dropdown-toggle::after {
     display: none;
 }
 
-.w3ls_logo_products_left {
-    width: 15%;
+.row {
+    width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
-h1 {
+.row > div {
+    margin-left: 0;
+    margin-right: 0;
+    float: none;
+    margin: auto;
+    text-align: center;
+}
+
+.w3ls_logo_products_left h1 {
+    display: flex;
+    justify-content: center;
     font-size: 36px;
 }
 
-/* .w3ls_logo_products_left1:nth-child(3) {
-    margin-left: 3em;
-} */
+.w3ls_logo_products_left1 {
+    margin-top: 2.3em;
+}
 
 .navbar-toggler {
     float: none;
