--- a/src/app/fixed-nav/fixed-nav.component.html
+++ b/src/app/fixed-nav/fixed-nav.component.html
@@ -1,9 +1,9 @@
 <!-- header -->
-<div class="agileits_header fixed">
-    <div class="w3l_offers">
+<div class="row agileits_header fixed">
+    <div class="col-sm-6 col-md-3 w3l_offers">
         <a routerLink="/branded">Today's special Offers !</a>
     </div>
-    <div class="w3l_search">
+    <div class="col-sm-6 col-md-3 w3l_search">
         <form action="#" method="post">
             <input type="text" id="product" name="product" placeholder="Search a product..." (keyup)="searchProduct($event)" autocomplete="off" value={{product}}>
             <input type="submit" value=" ">
@@ -20,14 +20,16 @@
             </div>
         </form>
     </div>
-    <div class="product_list_header">  
+    <div class="col-sm-12 col-md-6">
+    <div class="row">
+    <div class="col-5 product_list_header">  
         <form action="#" method="post" class="last">
             <fieldset>
                 <input type="submit" name="submit" value="View your cart" class="button" onclick="document.getElementById('PPMiniCart').style.display='block'" />
             </fieldset>
         </form>
     </div>
-    <div class="w3l_header_right">
+    <div class="col-2 w3l_header_right">
         <ul>
             <li class="dropdown profile_details_drop">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user" aria-hidden="true"></i><span class="caret"></span></a>
@@ -43,8 +45,10 @@
             </li>
         </ul>
     </div>
-    <div class="w3l_header_right1">
+    <div class="col-5 w3l_header_right1">
         <h2><a routerLink="/contact">Contact Us</a></h2>
+    </div>
+    </div>
     </div>
     <div class="clearfix"> </div>
 </div>
@@ -63,10 +67,10 @@
 
 <div class="logo_products">
     <div class="row container-fluid">
-        <div class="col-md-3 col-lg-3 w3ls_logo_products_left">
+        <div class="col-md-4 col-lg-3 w3ls_logo_products_left">
             <h1><a routerLink="/home"><span>Grocery</span> Store</a></h1>
         </div>
-        <div class="col-md-9 col-lg-5 w3ls_logo_products_left1">
+        <div class="col-md-8 col-lg-5 w3ls_logo_products_left1">
             <ul class="special_items">
                 <li><a routerLink="/event">Events</a><i>/</i></li>
                 <li><a routerLink="/about">About Us</a><i>/</i></li>
