--- a/src/app/fixed-nav/fixed-nav.component.html
+++ b/src/app/fixed-nav/fixed-nav.component.html
@@ -1,9 +1,9 @@
 <!-- header -->
 <div class="row agileits_header fixed">
-    <div class="col-sm-6 col-md-3 w3l_offers">
+    <div class="col-6 col-md-3 w3l_offers">
         <a routerLink="/branded">Today's special Offers !</a>
     </div>
-    <div class="col-sm-6 col-md-3 w3l_search">
+    <div class="col-6 col-md-3 w3l_search">
         <form action="#" method="post">
             <input type="text" id="product" name="product" placeholder="Search a product..." (keyup)="searchProduct($event)" autocomplete="off" value={{product}}>
             <input type="submit" value=" ">
@@ -20,7 +20,7 @@
             </div>
         </form>
     </div>
-    <div class="col-sm-12 col-md-6">
+    <div class="col-12 col-md-6">
     <div class="row">
     <div class="col-5 product_list_header">  
         <form action="#" method="post" class="last">
@@ -38,7 +38,7 @@
                         <ul class="dropdown-menu drp-mnu">
                             <li *ngIf="authService.isLoggedIn"><a (click)="authService.logout()">Logout</a></li> 
                             <li *ngIf="!authService.isLoggedIn"><a routerLink="/login">Login</a></li> 
-                            <li><a routerLink="/register">Sign Up</a></li>
+                            <li *ngIf="!authService.isLoggedIn"><a routerLink="/register">Sign Up</a></li>
                         </ul>
                     </div>                  
                 </div>	
@@ -146,45 +146,45 @@
            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-megadropdown-tabs">
                 <ul class="nav navbar-nav nav_1">
-                    <li class="nav-item"><a class="nav-link" routerLink="/branded">Branded Foods</a></li>
-                    <li class="nav-item"><a class="nav-link" routerLink="/household">Households</a></li>
+                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a class="nav-link" routerLink="/branded">Branded Foods</a></li>
+                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a class="nav-link" routerLink="/household">Households</a></li>
                     <li class="nav-item dropdown mega-dropdown active">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Fruits & Veggies<span class="caret"></span></a>				
                         <div class="dropdown-menu mega-dropdown-menu w3ls_vegetables_menu">
                             <div class="w3ls_vegetables">
                                 <ul>	
-                                    <li><a routerLink="/fruit">Fruits</a></li>
-                                    <li><a routerLink="/fruit">Vegetables</a></li>
+                                    <li data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/fruit">Fruits</a></li>
+                                    <li data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/fruit">Vegetables</a></li>
                                 </ul>
                             </div>                  
                         </div>				
                     </li>
-                    <li class="nav-item"><a class="nav-link" routerLink="/kitchen">Kitchen</a></li>
+                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a class="nav-link" routerLink="/kitchen">Kitchen</a></li>
                     <!-- <li class="nav-item"><a class="nav-link" href="short-codes.html">Short Codes</a></li> -->
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Beverages<span class="caret"></span></a>
                         <div class="dropdown-menu mega-dropdown-menu w3ls_vegetables_menu">
                             <div class="w3ls_vegetables">
                                 <ul>
-                                    <li><a routerLink="/beverage">Juices</a></li>
-                                    <li><a routerLink="/beverage">Soft Drinks</a></li>
+                                    <li data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/beverage">Juices</a></li>
+                                    <li data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/beverage">Soft Drinks</a></li>
                                 </ul>
                             </div>                  
                         </div>	
                     </li>
-                    <li class="nav-item"><a class="nav-link" routerLink="/pet">Pet Food</a></li>
+                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a class="nav-link" routerLink="/pet">Pet Food</a></li>
                     <li class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Frozen Foods<span class="caret"></span></a>
                         <div class="dropdown-menu mega-dropdown-menu w3ls_vegetables_menu">
                             <div class="w3ls_vegetables">
                                 <ul>
-                                    <li><a routerLink="/frozen">Frozen Snacks</a></li>
-                                    <li><a routerLink="/frozen">Frozen Nonveg</a></li>
+                                    <li data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/frozen">Frozen Snacks</a></li>
+                                    <li data-toggle="collapse" data-target=".navbar-collapse.show"><a routerLink="/frozen">Frozen Nonveg</a></li>
                                 </ul>
                             </div>                  
                         </div>	
                     </li>
-                    <li class="nav-item"><a class="nav-link" routerLink="/bread">Bread & Bakery</a></li>
+                    <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show"><a class="nav-link" routerLink="/bread">Bread & Bakery</a></li>
                 </ul>
              </div><!-- /.navbar-collapse -->
         </nav>
