--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -60,12 +60,12 @@
         <div class="col-lg-3 w3_footer_grid">
             <h3>twitter posts</h3>
             <ul class="w3_footer_grid_list1">
-                <li><label class="fa fa-twitter" aria-hidden="true"></label><i>01 day ago</i><span>Non numquam <a href="#">http://sd.ds/13jklf#</a>
+                <li><label class="fa fa-twitter" aria-hidden="true"></label><i>01 day ago</i><span>Non numquam <a href="http://sd.ds/13jklf" target="_blank">http://sd.ds/13jklf#</a>
                     eius modi tempora incidunt ut labore et
-                    <a href="#">http://sd.ds/1389kjklf#</a>quo nulla.</span></li>
-                <li><label class="fa fa-twitter" aria-hidden="true"></label><i>02 day ago</i><span>Con numquam <a href="#">http://fd.uf/56hfg#</a>
+                    <a href="http://sd.ds/1389kjklf" target="_blank">http://sd.ds/1389kjklf#</a>quo nulla.</span></li>
+                <li><label class="fa fa-twitter" aria-hidden="true"></label><i>02 day ago</i><span>Con numquam <a href="http://fd.uf/56hfg" target="_blank">http://fd.uf/56hfg#</a>
                     eius modi tempora incidunt ut labore et
-                    <a href="#">http://fd.uf/56hfg#</a>quo nulla.</span></li>
+                    <a href="http://fd.uf/56hfg" target="_blank">http://fd.uf/56hfg#</a>quo nulla.</span></li>
             </ul>
         </div>
         <div class="clearfix"> </div>
@@ -92,7 +92,7 @@
             <div class="clearfix"> </div>
         </div>
         <div class="container wthree_footer_copy">
-            <p>© 2016 Grocery Store. All rights reserved | Design by <a href="#">W3layouts</a></p>
+            <p>© 2016 Grocery Store. All rights reserved | Design by </p>
         </div>
     </div>
 </div>
