--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -26,7 +26,7 @@
                     </form>
                 </div>
                 <!-- <div class="cta"><a href="#">Forgot your password?</a></div> -->
-                <!-- <app-dialog title="Login"></app-dialog> -->
+                <app-dialog title="Sign In" msg="{{msg}}" url={{url}}></app-dialog>
             </div>
         </div>
     </div>
